--- a/sourcegen/networking/networking.csproj
+++ b/sourcegen/networking/networking.csproj
@@ -18,5 +18,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="bits/*.cs" />
+    <Compile Include="../../hashing/murmur3.cs" />
   </ItemGroup>
 </Project>
